## Game.gd - Ù…Ø¯ÛŒØ±ÛŒØª Ø§ØµÙ„ÛŒ Ú¯ÛŒÙ…â€ŒÙ¾Ù„ÛŒ
## Ú©Ù†ØªØ±Ù„ Ù…Ø±Ø§Ø­Ù„ØŒ Ø§Ù…ØªÛŒØ§Ø²ØŒ Ùˆ Ù…Ù†Ø·Ù‚ Ø¨Ø§Ø²ÛŒ
extends Control

# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
# Ø³ÛŒÚ¯Ù†Ø§Ù„â€ŒÙ‡Ø§
# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
signal word_submitted(word: String)
signal word_found(word: String, is_bonus: bool)
signal level_completed(stars: int)
signal game_paused
signal game_resumed

# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
# Ø«Ø§Ø¨Øªâ€ŒÙ‡Ø§
# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
const STAR_THRESHOLDS: Dictionary = {
	"three": 0.5,  # 50% Ø²Ù…Ø§Ù† Ø¨Ø§Ù‚ÛŒâ€ŒÙ…Ø§Ù†Ø¯Ù‡
	"two": 0.25    # 25% Ø²Ù…Ø§Ù† Ø¨Ø§Ù‚ÛŒâ€ŒÙ…Ø§Ù†Ø¯Ù‡
}

# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
# Ø±ÙØ±Ù†Ø³â€ŒÙ‡Ø§ÛŒ Ù†ÙˆØ¯Ù‡Ø§
# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
@onready var ui_animations: Node = $UIAnimations
@onready var background: ColorRect = $Background

# Top Bar
@onready var back_button: Button = $TopBar/MarginContainer/HBoxContainer/BackButton
@onready var level_label: Label = $TopBar/MarginContainer/HBoxContainer/LevelLabel
@onready var timer_label: Label = $TopBar/MarginContainer/HBoxContainer/TimerContainer/TimerLabel
@onready var coin_label: Label = $TopBar/MarginContainer/HBoxContainer/ScoreContainer/CoinLabel

# Game Content
@onready var word_grid: Control = $GameContent/WordGridContainer/WordGrid
@onready var letter_circle: Control = $GameContent/LetterCircleContainer/LetterCircle
@onready var current_word_label: Label = $GameContent/CurrentWordContainer/CurrentWordPanel/CurrentWordLabel
@onready var bonus_count_label: Label = $GameContent/BonusWordsContainer/BonusCount

# Hints
@onready var hint_letter_button: Button = $GameContent/HintsContainer/HintLetterButton
@onready var hint_word_button: Button = $GameContent/HintsContainer/HintWordButton
@onready var shuffle_button: Button = $GameContent/HintsContainer/ShuffleButton
@onready var bomb_button: Button = $GameContent/HintsContainer/BombButton

# Containers
@onready var connection_lines: Control = $ConnectionLines
@onready var particle_container: Control = $ParticleContainer

# Popups
@onready var level_complete_popup: Control = $LevelCompletePopup
@onready var pause_popup: Control = $PausePopup

# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
# Ù…ØªØºÛŒØ±Ù‡Ø§ÛŒ Ø¨Ø§Ø²ÛŒ
# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
var current_level_id: int = 1
var current_level_data: Dictionary = {}
var target_words: Array[String] = []
var bonus_words: Array[String] = []
var found_words: Array[String] = []
var found_bonus_words: Array[String] = []
var current_word: String = ""
var selected_letters: Array[Control] = []

# ØªØ§ÛŒÙ…Ø± Ùˆ Ø§Ù…ØªÛŒØ§Ø²
var time_limit: float = 180.0
var time_remaining: float = 180.0
var is_timer_running: bool = false
var score: int = 0

# ÙˆØ¶Ø¹ÛŒØª Ø¨Ø§Ø²ÛŒ
var is_game_active: bool = false
var is_paused: bool = false
var is_level_complete: bool = false

# Ø´ÛŒØ¯Ø±
var _bg_time: float = 0.0

# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
# ØªÙˆØ§Ø¨Ø¹ Ú†Ø±Ø®Ù‡ Ø­ÛŒØ§Øª
# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
func _ready() -> void:
	_connect_signals()
	_load_level(GameData.player_data["current_level"])
	_play_entrance_animation()
	
	# Ø´Ø±ÙˆØ¹ Ù…ÙˆØ³ÛŒÙ‚ÛŒ Ø¨Ø§Ø²ÛŒ
	AudioManager.play_music("game")

func _process(delta: float) -> void:
	# Ø¨Ø±ÙˆØ²Ø±Ø³Ø§Ù†ÛŒ Ø´ÛŒØ¯Ø±
	_bg_time += delta
	if background.material:
		background.material.set_shader_parameter("time", _bg_time)
	
	# Ø¨Ø±ÙˆØ²Ø±Ø³Ø§Ù†ÛŒ ØªØ§ÛŒÙ…Ø±
	if is_timer_running and not is_paused:
		time_remaining -= delta
		_update_timer_display()
		
		if time_remaining <= 0:
			time_remaining = 0
			_on_time_up()

func _input(event: InputEvent) -> void:
	# Ø¯Ú©Ù…Ù‡ Ø¨Ø§Ø²Ú¯Ø´Øª Ø§Ù†Ø¯Ø±ÙˆÛŒØ¯
	if event.is_action_pressed("ui_cancel"):
		if is_level_complete:
			return
		if is_paused:
			_resume_game()
		else:
			_pause_game()

# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
# Ø§ØªØµØ§Ù„ Ø³ÛŒÚ¯Ù†Ø§Ù„â€ŒÙ‡Ø§
# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
func _connect_signals() -> void:
	# Ø¯Ú©Ù…Ù‡â€ŒÙ‡Ø§ÛŒ Ø¨Ø§Ù„Ø§
	back_button.pressed.connect(_on_back_pressed)
	
	# Ø±Ø§Ù‡Ù†Ù…Ø§Ù‡Ø§
	hint_letter_button.pressed.connect(_on_hint_letter_pressed)
	hint_word_button.pressed.connect(_on_hint_word_pressed)
	shuffle_button.pressed.connect(_on_shuffle_pressed)
	bomb_button.pressed.connect(_on_bomb_pressed)
	
	# Ø³ÛŒÚ¯Ù†Ø§Ù„â€ŒÙ‡Ø§ÛŒ LetterCircle
	letter_circle.letter_selected.connect(_on_letter_selected)
	letter_circle.letter_deselected.connect(_on_letter_deselected)
	letter_circle.word_submitted.connect(_on_word_submitted)
	letter_circle.selection_cleared.connect(_on_selection_cleared)
	
	# Ù¾Ø§Ù¾â€ŒØ¢Ù¾ ØªÚ©Ù…ÛŒÙ„ Ù…Ø±Ø­Ù„Ù‡
	$LevelCompletePopup/Panel/Content/ButtonsContainer/HomeButton.pressed.connect(_go_to_main_menu)
	$LevelCompletePopup/Panel/Content/ButtonsContainer/RetryButton.pressed.connect(_retry_level)
	$LevelCompletePopup/Panel/Content/ButtonsContainer/NextButton.pressed.connect(_next_level)
	
	# Ù¾Ø§Ù¾â€ŒØ¢Ù¾ ØªÙˆÙ‚Ù
	$PausePopup/Panel/Content/ResumeButton.pressed.connect(_resume_game)
	$PausePopup/Panel/Content/RestartButton.pressed.connect(_retry_level)
	$PausePopup/Panel/Content/HomeButton.pressed.connect(_go_to_main_menu)
	$PausePopup/Overlay.gui_input.connect(func(event):
		if event is InputEventMouseButton and event.pressed:
			_resume_game()
	)

# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
# Ø¨Ø§Ø±Ú¯Ø°Ø§Ø±ÛŒ Ù…Ø±Ø­Ù„Ù‡
# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
func _load_level(level_id: int) -> void:
	current_level_id = level_id
	
	# Ø¯Ø±ÛŒØ§ÙØª Ø¯Ø§Ø¯Ù‡ Ù…Ø±Ø­Ù„Ù‡
	if level_id <= GameData.levels_data.size():
		current_level_data = GameData.levels_data[level_id - 1]
	else:
		current_level_data = _generate_random_level(level_id)
	
	# ØªÙ†Ø¸ÛŒÙ… Ø¯Ø§Ø¯Ù‡â€ŒÙ‡Ø§
	var letters: String = current_level_data.get("letters", "Ø³Ù„Ø§Ù…")
	target_words = Array(current_level_data.get("words", ["Ø³Ù„Ø§Ù…"]), TYPE_STRING, "", null)
	bonus_words = Array(current_level_data.get("bonus_words", []), TYPE_STRING, "", null)
	
	time_limit = current_level_data.get("time_limit", 180.0)
	time_remaining = time_limit
	
	# Ø±ÛŒØ³Øª ÙˆØ¶Ø¹ÛŒØª
	found_words.clear()
	found_bonus_words.clear()
	current_word = ""
	selected_letters.clear()
	score = 0
	is_level_complete = false
	
	# Ø¨Ø±ÙˆØ²Ø±Ø³Ø§Ù†ÛŒ UI
	level_label.text = "Ù…Ø±Ø­Ù„Ù‡ %d" % level_id
	coin_label.text = str(GameData.get_coins())
	_update_timer_display()
	_update_bonus_display()
	
	# Ø±Ø§Ù‡â€ŒØ§Ù†Ø¯Ø§Ø²ÛŒ Ú©Ø§Ù…Ù¾ÙˆÙ†Ù†Øªâ€ŒÙ‡Ø§
	letter_circle.setup(letters)
	word_grid.setup(target_words)
	
	# Ø´Ø±ÙˆØ¹ Ø¨Ø§Ø²ÛŒ
	is_game_active = true
	is_timer_running = true

func _generate_random_level(level_id: int) -> Dictionary:
	"""ØªÙˆÙ„ÛŒØ¯ Ù…Ø±Ø­Ù„Ù‡ ØªØµØ§Ø¯ÙÛŒ Ø¨Ø±Ø§ÛŒ Ù…Ø±Ø§Ø­Ù„ Ø¨Ø¹Ø¯ Ø§Ø² Ù…Ø­ØªÙˆØ§ÛŒ Ø¢Ù…Ø§Ø¯Ù‡"""
	# TODO: Ø§Ù„Ú¯ÙˆØ±ÛŒØªÙ… ØªÙˆÙ„ÛŒØ¯ Ù…Ø±Ø­Ù„Ù‡
	return {
		"letters": "Ú©Ù„Ù…Ø§Øª",
		"words": ["Ú©Ù„Ù…Ø§Øª", "Ú©Ù„Ø§Ù…", "Ù…Ø§Øª"],
		"bonus_words": ["Ù…Ù„Ú©"],
		"time_limit": 150.0
	}

# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
# Ù…Ø¯ÛŒØ±ÛŒØª Ø§Ù†ØªØ®Ø§Ø¨ Ø­Ø±ÙˆÙ
# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
func _on_letter_selected(letter: String, letter_button: Control) -> void:
	if not is_game_active or is_paused:
		return
	
	current_word += letter
	selected_letters.append(letter_button)
	
	# Ø¨Ø±ÙˆØ²Ø±Ø³Ø§Ù†ÛŒ Ù†Ù…Ø§ÛŒØ´ Ú©Ù„Ù…Ù‡
	current_word_label.text = current_word
	
	# Ø§Ù†ÛŒÙ…ÛŒØ´Ù†
	ui_animations.animate_letter_select(letter_button)
	AudioManager.play_letter_select()
	
	# Ø±Ø³Ù… Ø®Ø· Ø§ØªØµØ§Ù„
	if selected_letters.size() > 1:
		var from_pos: Vector2 = selected_letters[-2].global_position + selected_letters[-2].size / 2
		var to_pos: Vector2 = letter_button.global_position + letter_button.size / 2
		# ØªØ¨Ø¯ÛŒÙ„ Ø¨Ù‡ Ù…ÙˆÙ‚Ø¹ÛŒØª Ù…Ø­Ù„ÛŒ
		from_pos = connection_lines.get_global_transform().affine_inverse() * from_pos
		to_pos = connection_lines.get_global_transform().affine_inverse() * to_pos
		ui_animations.create_connection_line(from_pos, to_pos, connection_lines, Color(0.4, 0.7, 1.0, 0.8))
		AudioManager.play_letter_connect()

func _on_letter_deselected(letter: String, letter_button: Control) -> void:
	if not is_game_active:
		return
	
	# Ø­Ø°Ù Ø¢Ø®Ø±ÛŒÙ† Ø­Ø±Ù
	if current_word.length() > 0:
		current_word = current_word.substr(0, current_word.length() - 1)
	
	if selected_letters.size() > 0:
		selected_letters.pop_back()
	
	current_word_label.text = current_word
	ui_animations.animate_letter_deselect(letter_button)
	
	# Ø­Ø°Ù Ø¢Ø®Ø±ÛŒÙ† Ø®Ø·
	if connection_lines.get_child_count() > 0:
		var last_line: Node = connection_lines.get_child(-1)
		ui_animations.remove_connection_line(last_line)

func _on_selection_cleared() -> void:
	current_word = ""
	selected_letters.clear()
	current_word_label.text = ""
	
	# Ø­Ø°Ù Ù‡Ù…Ù‡ Ø®Ø·ÙˆØ·
	for line in connection_lines.get_children():
		line.queue_free()

func _on_word_submitted(word: String) -> void:
	if not is_game_active or is_paused:
		_on_selection_cleared()
		return
	
	_check_word(word)
	_on_selection_cleared()
	letter_circle.clear_selection()

# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
# Ø¨Ø±Ø±Ø³ÛŒ Ú©Ù„Ù…Ù‡
# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
func _check_word(word: String) -> void:
	# Ø¨Ø±Ø±Ø³ÛŒ Ú©Ù„Ù…Ø§Øª ØªÚ©Ø±Ø§Ø±ÛŒ
	if word in found_words or word in found_bonus_words:
		_on_word_duplicate(word)
		return
	
	# Ø¨Ø±Ø±Ø³ÛŒ Ú©Ù„Ù…Ø§Øª Ù‡Ø¯Ù
	if word in target_words:
		_on_word_correct(word, false)
		return
	
	# Ø¨Ø±Ø±Ø³ÛŒ Ú©Ù„Ù…Ø§Øª Ø¬Ø§ÛŒØ²Ù‡
	if word in bonus_words:
		_on_word_correct(word, true)
		return
	
	# Ø¨Ø±Ø±Ø³ÛŒ Ø¯Ø± Ø¯ÛŒÚ©Ø´Ù†Ø±ÛŒ (Ú©Ù„Ù…Ù‡ Ø¬Ø§ÛŒØ²Ù‡ Ù†Ø§Ø´Ù†Ø§Ø®ØªÙ‡)
	if GameData.is_valid_word(word) and word.length() >= 2:
		_on_word_correct(word, true)
		return
	
	# Ú©Ù„Ù…Ù‡ Ø§Ø´ØªØ¨Ø§Ù‡
	_on_word_wrong(word)

func _on_word_correct(word: String, is_bonus: bool) -> void:
	AudioManager.play_correct()
	
	if is_bonus:
		found_bonus_words.append(word)
		score += word.length() * 15
		_update_bonus_display()
		_show_bonus_word_effect(word)
	else:
		found_words.append(word)
		score += word.length() * 10
		word_grid.reveal_word(word)
	
	# Ø§ÙØ²ÙˆØ¯Ù† Ú©Ù„Ù…Ù‡ Ø¨Ù‡ Ø¢Ù…Ø§Ø±
	GameData.add_word_found()
	
	# Ø¨Ø±Ø±Ø³ÛŒ ØªÚ©Ù…ÛŒÙ„ Ù…Ø±Ø­Ù„Ù‡
	if found_words.size() >= target_words.size():
		_on_level_complete()

func _on_word_wrong(word: String) -> void:
	AudioManager.play_wrong()
	ui_animations.animate_word_wrong(selected_letters.duplicate())
	
	# Ù„Ø±Ø²Ø´ Ù†Ù…Ø§ÛŒØ´ Ú©Ù„Ù…Ù‡
	var tween := create_tween()
	var original_pos: Vector2 = current_word_label.position
	for i in range(3):
		tween.tween_property(current_word_label, "position:x", original_pos.x + 10, 0.05)
		tween.tween_property(current_word_label, "position:x", original_pos.x - 10, 0.05)
	tween.tween_property(current_word_label, "position:x", original_pos.x, 0.05)

func _on_word_duplicate(word: String) -> void:
	AudioManager.play_sfx("pop")
	# Ø§ÙÚ©Øª Ú©Ù„Ù…Ù‡ ØªÚ©Ø±Ø§Ø±ÛŒ
	var tween := create_tween()
	tween.tween_property(current_word_label, "modulate", Color.YELLOW, 0.1)
	tween.tween_property(current_word_label, "modulate", Color.WHITE, 0.2)

func _show_bonus_word_effect(word: String) -> void:
	"""Ù†Ù…Ø§ÛŒØ´ Ø§ÙÚ©Øª Ú©Ù„Ù…Ù‡ Ø¬Ø§ÛŒØ²Ù‡"""
	var popup := Label.new()
	popup.text = "+" + word + " ğŸ"
	popup.add_theme_font_size_override("font_size", 36)
	popup.add_theme_color_override("font_color", Color.GOLD)
	popup.horizontal_alignment = HORIZONTAL_ALIGNMENT_CENTER
	popup.position = Vector2(size.x / 2 - 100, size.y / 2)
	particle_container.add_child(popup)
	
	var tween := popup.create_tween()
	tween.set_parallel(true)
	tween.tween_property(popup, "position:y", popup.position.y - 150, 1.0)
	tween.tween_property(popup, "modulate:a", 0.0, 1.0).set_delay(0.5)
	tween.chain().tween_callback(popup.queue_free)

# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
# ØªÚ©Ù…ÛŒÙ„ Ù…Ø±Ø­Ù„Ù‡
# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
func _on_level_complete() -> void:
	is_level_complete = true
	is_timer_running = false
	is_game_active = false
	
	AudioManager.play_complete()
	
	# Ù…Ø­Ø§Ø³Ø¨Ù‡ Ø³ØªØ§Ø±Ù‡â€ŒÙ‡Ø§
	var stars: int = _calculate_stars()
	
	# Ù…Ø­Ø§Ø³Ø¨Ù‡ Ø¬ÙˆØ§ÛŒØ²
	var time_bonus: int = int(time_remaining) * 2
	var bonus_word_reward: int = found_bonus_words.size() * 25
	var total_score: int = score + time_bonus + bonus_word_reward
	var coin_reward: int = 10 + (stars * 10) + (found_bonus_words.size() * 5)
	var xp_reward: int = stars * 50 + found_bonus_words.size() * 25
	
	# Ø°Ø®ÛŒØ±Ù‡ Ù¾ÛŒØ´Ø±ÙØª
	GameData.complete_level(
		current_level_id,
		stars,
		time_limit - time_remaining,
		found_bonus_words
	)
	
	# Ù†Ù…Ø§ÛŒØ´ Ù¾Ø§Ù¾â€ŒØ¢Ù¾
	await get_tree().create_timer(0.5).timeout
	_show_level_complete_popup(stars, total_score, coin_reward, xp_reward)

func _calculate_stars() -> int:
	var time_ratio: float = time_remaining / time_limit
	
	if time_ratio >= STAR_THRESHOLDS["three"]:
		return 3
	elif time_ratio >= STAR_THRESHOLDS["two"]:
		return 2
	else:
		return 1

func _show_level_complete_popup(stars: int, total_score: int, coins: int, xp: int) -> void:
	# Ø¨Ø±ÙˆØ²Ø±Ø³Ø§Ù†ÛŒ Ù…Ø­ØªÙˆØ§
	$LevelCompletePopup/Panel/Content/ScoreLabel.text = "Ø§Ù…ØªÛŒØ§Ø²: %d" % total_score
	$LevelCompletePopup/Panel/Content/TimeLabel.text = "Ø²Ù…Ø§Ù†: %s" % _format_time(time_limit - time_remaining)
	$LevelCompletePopup/Panel/Content/BonusLabel.text = "Ú©Ù„Ù…Ø§Øª Ø¬Ø§ÛŒØ²Ù‡: %d" % found_bonus_words.size()
	$LevelCompletePopup/Panel/Content/RewardContainer/CoinReward.text = "ğŸª™ +%d" % coins
	$LevelCompletePopup/Panel/Content/RewardContainer/XPReward.text = "â­ +%d XP" % xp
	
	# Ù†Ù…Ø§ÛŒØ´ Ù¾Ø§Ù¾â€ŒØ¢Ù¾
	level_complete_popup.visible = true
	level_complete_popup.modulate.a = 0
	
	var panel: Control = $LevelCompletePopup/Panel
	panel.scale = Vector2(0.5, 0.5)
	
	var tween := create_tween()
	tween.tween_property(level_complete_popup, "modulate:a", 1.0, 0.3)
	tween.parallel().tween_property(panel, "scale", Vector2.ONE, 0.4)\
		.set_trans(Tween.TRANS_BACK).set_ease(Tween.EASE_OUT)
	
	# Ø§Ù†ÛŒÙ…ÛŒØ´Ù† Ø³ØªØ§Ø±Ù‡â€ŒÙ‡Ø§
	await tween.finished
	_animate_stars(stars)
	
	# Ú©Ø§Ù†ÙØªÛŒ
	if stars >= 2:
		ui_animations.animate_confetti(level_complete_popup, stars * 30)

func _animate_stars(count: int) -> void:
	var star_nodes: Array = [
		$LevelCompletePopup/Panel/Content/StarsContainer/Star1,
		$LevelCompletePopup/Panel/Content/StarsContainer/Star2,
		$LevelCompletePopup/Panel/Content/StarsContainer/Star3
	]
	
	for i in range(3):
		var star: Label = star_nodes[i]
		if i < count:
			star.modulate = Color.GOLD
			ui_animations.animate_star(star, i * 0.2)
			AudioManager.play_star()
		else:
			star.modulate = Color(0.3, 0.3, 0.3)

func _on_time_up() -> void:
	"""Ø²Ù…Ø§Ù† ØªÙ…Ø§Ù… Ø´Ø¯"""
	is_timer_running = false
	is_game_active = false
	
	AudioManager.play_wrong()
	
	# Ù†Ù…Ø§ÛŒØ´ Ù¾Ø§Ù¾â€ŒØ¢Ù¾ Ø²Ù…Ø§Ù† ØªÙ…Ø§Ù…
	# TODO: Ù¾Ø§Ù¾â€ŒØ¢Ù¾ Ù…Ø®ØµÙˆØµ
	_show_level_complete_popup(0, score, 0, 0)

# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
# Ø±Ø§Ù‡Ù†Ù…Ø§Ù‡Ø§
# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
func _on_hint_letter_pressed() -> void:
	AudioManager.play_click()
	ui_animations.button_press_effect(hint_letter_button)
	
	if GameData.use_hint("show_letter"):
		_reveal_one_letter()
		AudioManager.play_sfx("hint")
	else:
		_show_not_enough_coins()

func _on_hint_word_pressed() -> void:
	AudioManager.play_click()
	ui_animations.button_press_effect(hint_word_button)
	
	if GameData.use_hint("show_word"):
		_reveal_one_word()
		AudioManager.play_sfx("hint")
	else:
		_show_not_enough_coins()

func _on_shuffle_pressed() -> void:
	AudioManager.play_click()
	ui_animations.button_press_effect(shuffle_button)
	
	if GameData.use_hint("shuffle"):
		letter_circle.shuffle_letters()
		AudioManager.play_sfx("shuffle")
	else:
		_show_not_enough_coins()

func _on_bomb_pressed() -> void:
	AudioManager.play_click()
	ui_animations.button_press_effect(bomb_button)
	
	# TODO: Ù¾ÛŒØ§Ø¯Ù‡â€ŒØ³Ø§Ø²ÛŒ Ø¨Ù…Ø¨
	pass

func _reveal_one_letter() -> void:
	"""Ù†Ù…Ø§ÛŒØ´ ÛŒÚ© Ø­Ø±Ù Ø§Ø² ÛŒÚ© Ú©Ù„Ù…Ù‡ Ù¾ÛŒØ¯Ø§ Ù†Ø´Ø¯Ù‡"""
	for word in target_words:
		if word not in found_words:
			word_grid.reveal_letter_in_word(word)
			break

func _reveal_one_word() -> void:
	"""Ù†Ù…Ø§ÛŒØ´ Ú©Ø§Ù…Ù„ ÛŒÚ© Ú©Ù„Ù…Ù‡"""
	for word in target_words:
		if word not in found_words:
			found_words.append(word)
			word_grid.reveal_word(word)
			score += word.length() * 5  # Ø§Ù…ØªÛŒØ§Ø² Ú©Ù…ØªØ± Ø¨Ø±Ø§ÛŒ Ø±Ø§Ù‡Ù†Ù…Ø§
			
			if found_words.size() >= target_words.size():
				_on_level_complete()
			break

func _show_not_enough_coins() -> void:
	"""Ù†Ù…Ø§ÛŒØ´ Ù¾ÛŒØ§Ù… Ú©Ù…Ø¨ÙˆØ¯ Ø³Ú©Ù‡"""
	# TODO: Ù¾Ø§Ù¾â€ŒØ¢Ù¾ Ø®Ø±ÛŒØ¯ Ø³Ú©Ù‡
	var popup := Label.new()
	popup.text = "Ø³Ú©Ù‡ Ú©Ø§ÙÛŒ Ù†ÛŒØ³Øª! ğŸª™"
	popup.add_theme_font_size_override("font_size", 28)
	popup.add_theme_color_override("font_color", Color.RED)
	popup.horizontal_alignment = HORIZONTAL_ALIGNMENT_CENTER
	popup.position = Vector2(size.x / 2 - 100, size.y / 2)
	particle_container.add_child(popup)
	
	var tween := popup.create_tween()
	tween.tween_property(popup, "modulate:a", 0.0, 1.5).set_delay(1.0)
	tween.tween_callback(popup.queue_free)

# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
# ØªÙˆÙ‚Ù Ùˆ Ø§Ø¯Ø§Ù…Ù‡
# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
func _pause_game() -> void:
	is_paused = true
	game_paused.emit()
	
	pause_popup.visible = true
	pause_popup.modulate.a = 0
	
	var tween := create_tween()
	tween.tween_property(pause_popup, "modulate:a", 1.0, 0.2)

func _resume_game() -> void:
	is_paused = false
	game_resumed.emit()
	
	var tween := create_tween()
	tween.tween_property(pause_popup, "modulate:a", 0.0, 0.2)
	tween.tween_callback(func(): pause_popup.visible = false)

func _on_back_pressed() -> void:
	AudioManager.play_click()
	if is_level_complete:
		_go_to_main_menu()
	else:
		_pause_game()

# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
# Ù†Ø§ÙˆØ¨Ø±ÛŒ
# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
func _go_to_main_menu() -> void:
	AudioManager.play_click()
	var tween := create_tween()
	tween.tween_property(self, "modulate:a", 0.0, 0.3)
	tween.tween_callback(func(): get_tree().change_scene_to_file("res://scenes/Main.tscn"))

func _retry_level() -> void:
	AudioManager.play_click()
	_load_level(current_level_id)
	
	pause_popup.visible = false
	level_complete_popup.visible = false

func _next_level() -> void:
	AudioManager.play_click()
	level_complete_popup.visible = false
	_load_level(current_level_id + 1)

# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
# Ø¨Ø±ÙˆØ²Ø±Ø³Ø§Ù†ÛŒ UI
# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
func _update_timer_display() -> void:
	timer_label.text = _format_time(time_remaining)
	
	# ØªØºÛŒÛŒØ± Ø±Ù†Ú¯ Ø²Ù…Ø§Ù†ÛŒ Ú©Ù‡ Ú©Ù… Ø§Ø³Øª
	if time_remaining <= 30:
		timer_label.modulate = Color.RED
	elif time_remaining <= 60:
		timer_label.modulate = Color.ORANGE
	else:
		timer_label.modulate = Color.WHITE

func _update_bonus_display() -> void:
	bonus_count_label.text = "%d/%d" % [found_bonus_words.size(), bonus_words.size()]

func _format_time(seconds: float) -> String:
	var mins: int = int(seconds) / 60
	var secs: int = int(seconds) % 60
	return "%d:%02d" % [mins, secs]

# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
# Ø§Ù†ÛŒÙ…ÛŒØ´Ù†â€ŒÙ‡Ø§
# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
func _play_entrance_animation() -> void:
	modulate.a = 0
	
	var tween := create_tween()
	tween.tween_property(self, "modulate:a", 1.0, 0.3)
	
	# Ø§Ù†ÛŒÙ…ÛŒØ´Ù† ÙˆØ±ÙˆØ¯ Ø§Ø¬Ø²Ø§
	word_grid.modulate.a = 0
	letter_circle.modulate.a = 0
	
	tween.tween_property(word_grid, "modulate:a", 1.0, 0.3).set_delay(0.2)
	tween.parallel().tween_property(letter_circle, "modulate:a", 1.0, 0.3).set_delay(0.3)
